check-cluster/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: rconway
spec:
  selector:
    app: nginx
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
